--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="spacer"></div>
     </header>
 
-    <!-- 고정 사이드바 (태블릿/데스크톱) -->
+    <!-- 고정 사이드바 -->
     <nav class="sidebar" aria-label="사이드바 메뉴">
       <div class="nav">
         <a class="active" href="#todo" aria-current="page">✅ 할 일 리스트</a>
@@ -39,7 +39,6 @@
         <div id="taskList" role="list" aria-label="할 일 목록"></div>
       </section>
 
-      <!-- 자리만 -->
       <section id="calendar" class="board" hidden><h2>캘린더 일정</h2></section>
       <section id="focus" class="board" hidden><h2>순수공부 시간</h2></section>
       <section id="memo" class="board" hidden><h2>메모</h2></section>
@@ -59,7 +58,7 @@
     </div>
   </nav>
 
-  <!-- 모달: 일정 생성 -->
+  <!-- 모달: 일정 생성/수정 공용 -->
   <dialog id="taskModal" aria-labelledby="taskModalTitle">
     <form method="dialog" class="modal-body">
       <header class="modal-head">
@@ -73,7 +72,7 @@
     </form>
   </dialog>
 
-  <!-- 모달: 카테고리 센터(탭) -->
+  <!-- 모달: 카테고리 센터 -->
   <dialog id="categoryCenterModal" aria-labelledby="catCenterTitle">
     <div class="modal-body">
       <header class="modal-head">
