--- a/index.html
+++ b/index.html
@@ -95,6 +95,96 @@
   <!-- 토스트 호스트 (todo.js에서 사용) -->
   <div id="toastHost" aria-live="polite" aria-atomic="true"></div>
 
+
+<!-- 일정 생성/수정 모달 -->
+<dialog id="taskModal">
+  <div class="modal-body" role="dialog" aria-labelledby="taskModalTitle">
+    <div class="modal-head">
+      <h3 id="taskModalTitle">일정 생성</h3>
+      <button id="taskCancelBtn" aria-label="닫기">✕</button>
+    </div>
+
+    <form id="taskForm">
+      <label>
+        제목
+        <input id="taskTitleInput" type="text" placeholder="무엇을 할까요?" autocomplete="off" />
+      </label>
+
+      <label>
+        기한
+        <input id="taskDueInput" type="date" />
+      </label>
+
+      <label>
+        카테고리
+        <select id="taskCategorySelect"></select>
+      </label>
+
+      <div class="modal-actions">
+        <button type="button" id="taskSaveBtn" class="primary">추가</button>
+      </div>
+    </form>
+  </div>
+</dialog>
+
+<!-- 카테고리 센터 (목록/관리 + 새로 만들기) -->
+<dialog id="categoryCenterModal">
+  <div class="modal-body" role="dialog" aria-labelledby="catCenterTitle">
+    <div class="modal-head">
+      <h3 id="catCenterTitle">카테고리</h3>
+      <button id="catCenterCloseBtn" aria-label="닫기">✕</button>
+    </div>
+
+    <div class="tabs" role="tablist">
+      <button id="tabManage" class="tab active" role="tab" aria-selected="true">목록/관리</button>
+      <button id="tabCreate" class="tab" role="tab" aria-selected="false">새로 만들기</button>
+    </div>
+
+    <!-- 목록/관리 탭 -->
+    <section id="catTabManage" role="tabpanel">
+      <div class="cat-toolbar">
+        <input id="catSearchInput" type="search" placeholder="카테고리 검색" />
+        <select id="catSortSelect" title="정렬">
+          <option value="order">정렬: 사용자 순서</option>
+          <option value="name">정렬: 이름</option>
+          <option value="count">정렬: 사용 개수</option>
+        </select>
+      </div>
+      <ul id="catCenterList" class="cat-center-list"></ul>
+      <p class="muted" style="margin-top:8px">
+        <small>기본(Inbox)은 삭제/이름변경할 수 없습니다. 삭제 시 해당 카테고리의 일정은 기본으로 이동합니다.</small>
+      </p>
+    </section>
+
+    <!-- 새로 만들기 탭 -->
+    <section id="catTabCreate" role="tabpanel" hidden>
+      <form>
+        <label>
+          이름
+          <input id="newCatName" type="text" placeholder="예) 공부, 운동" autocomplete="off">
+        </label>
+
+        <div style="margin:8px 0 4px">색상</div>
+        <div id="newCatPalette" class="palette">
+          <button type="button" data-color="#3b82f6" style="background:#3b82f6" class="selected" aria-label="파랑"></button>
+          <button type="button" data-color="#22c55e" style="background:#22c55e" aria-label="초록"></button>
+          <button type="button" data-color="#f59e0b" style="background:#f59e0b" aria-label="주황"></button>
+          <button type="button" data-color="#ef4444" style="background:#ef4444" aria-label="빨강"></button>
+          <button type="button" data-color="#a855f7" style="background:#a855f7" aria-label="보라"></button>
+          <button type="button" data-color="#64748b" style="background:#64748b" aria-label="회색"></button>
+          <button type="button" id="newCatMore" class="more">기타…</button>
+        </div>
+        <input id="newCatColor" type="hidden" value="#3b82f6">
+        <input id="newCatColorPicker" class="visually-hidden" type="color" value="#3b82f6" />
+
+        <div class="modal-actions">
+          <button id="newCatSaveBtn" class="primary" type="submit">추가</button>
+        </div>
+      </form>
+    </section>
+  </div>
+</dialog>
+  
   <!-- 메뉴/드로어 + NAV (기존) -->
   <script>
     (function(){
@@ -133,7 +223,7 @@
   </script>
 
   <!-- 기존 todo.js 다음에 캘린더 로드 -->
-  <script src="todo.js"></script>
-  <script src="calendar.js"></script>
+  <script src="todo.js" defer></script>
+  <script src="calendar.js" defer></script>
 </body>
 </html>
