--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- 메인 -->
     <main class="main" role="main">
+      <!-- ✅ 할 일 리스트 -->
       <section id="todo" class="board" aria-labelledby="todo-title">
         <header class="pane-head">
           <h2 id="todo-title">할 일 리스트</h2>
@@ -39,7 +40,7 @@
         <div id="taskList" role="list" aria-label="할 일 목록"></div>
       </section>
 
-      <!-- ✅ 캘린더: 월간 뷰 + Day 패널 -->
+      <!-- ✅ 캘린더 -->
       <section id="calendar" class="board" hidden aria-labelledby="cal-title">
         <header class="cal-head">
           <h2 id="cal-title">캘린더</h2>
@@ -74,7 +75,21 @@
         </div>
       </section>
 
-      <section id="focus" class="board" hidden><h2>순수공부 시간</h2></section>
+      <!-- ✅ 순수공부 시간 -->
+      <section id="focus" class="board" hidden aria-labelledby="focus-title">
+        <header class="pane-head">
+          <h2 id="focus-title">순수공부 시간</h2>
+          <div class="focus-toolbar">
+            <button id="focusStart" class="primary">▶︎ 타이머 시작</button>
+          </div>
+        </header>
+        <div class="muted" style="margin-top:8px">
+          타이머 시작 시 전체 화면으로 전환되고, 오버레이에 시간이 표시됩니다.
+          앱을 벗어나면 자동으로 일시정지됩니다.
+        </div>
+      </section>
+
+      <!-- 메모/설정 자리표시자 -->
       <section id="memo" class="board" hidden><h2>메모</h2></section>
       <section id="settings" class="board" hidden><h2>설정</h2></section>
     </main>
@@ -92,101 +107,113 @@
     </div>
   </nav>
 
-  <!-- 토스트 호스트 (todo.js에서 사용) -->
+  <!-- ✅ 토스트 호스트 -->
   <div id="toastHost" aria-live="polite" aria-atomic="true"></div>
 
-
-<!-- 일정 생성/수정 모달 -->
-<dialog id="taskModal">
-  <div class="modal-body" role="dialog" aria-labelledby="taskModalTitle">
-    <div class="modal-head">
-      <h3 id="taskModalTitle">일정 생성</h3>
-      <button id="taskCancelBtn" aria-label="닫기">✕</button>
-    </div>
-
-    <form id="taskForm">
-      <label>
-        제목
-        <input id="taskTitleInput" type="text" placeholder="무엇을 할까요?" autocomplete="off" />
-      </label>
-
-      <label>
-        기한
-        <input id="taskDueInput" type="date" />
-      </label>
-
-      <label>
-        카테고리
-        <select id="taskCategorySelect"></select>
-      </label>
-
-      <div class="modal-actions">
-        <button type="button" id="taskSaveBtn" class="primary">추가</button>
+  <!-- ✅ 일정 생성/수정 모달 -->
+  <dialog id="taskModal">
+    <div class="modal-body" role="dialog" aria-labelledby="taskModalTitle">
+      <div class="modal-head">
+        <h3 id="taskModalTitle">일정 생성</h3>
+        <button id="taskCancelBtn" aria-label="닫기">✕</button>
       </div>
-    </form>
-  </div>
-</dialog>
 
-<!-- 카테고리 센터 (목록/관리 + 새로 만들기) -->
-<dialog id="categoryCenterModal">
-  <div class="modal-body" role="dialog" aria-labelledby="catCenterTitle">
-    <div class="modal-head">
-      <h3 id="catCenterTitle">카테고리</h3>
-      <button id="catCenterCloseBtn" aria-label="닫기">✕</button>
-    </div>
-
-    <div class="tabs" role="tablist">
-      <button id="tabManage" class="tab active" role="tab" aria-selected="true">목록/관리</button>
-      <button id="tabCreate" class="tab" role="tab" aria-selected="false">새로 만들기</button>
-    </div>
-
-    <!-- 목록/관리 탭 -->
-    <section id="catTabManage" role="tabpanel">
-      <div class="cat-toolbar">
-        <input id="catSearchInput" type="search" placeholder="카테고리 검색" />
-        <select id="catSortSelect" title="정렬">
-          <option value="order">정렬: 사용자 순서</option>
-          <option value="name">정렬: 이름</option>
-          <option value="count">정렬: 사용 개수</option>
-        </select>
-      </div>
-      <ul id="catCenterList" class="cat-center-list"></ul>
-      <p class="muted" style="margin-top:8px">
-        <small>기본(Inbox)은 삭제/이름변경할 수 없습니다. 삭제 시 해당 카테고리의 일정은 기본으로 이동합니다.</small>
-      </p>
-    </section>
-
-    <!-- 새로 만들기 탭 -->
-    <section id="catTabCreate" role="tabpanel" hidden>
-      <form>
+      <form id="taskForm">
         <label>
-          이름
-          <input id="newCatName" type="text" placeholder="예) 공부, 운동" autocomplete="off">
+          제목
+          <input id="taskTitleInput" type="text" placeholder="무엇을 할까요?" autocomplete="off" />
         </label>
 
-        <div style="margin:8px 0 4px">색상</div>
-        <div id="newCatPalette" class="palette">
-          <button type="button" data-color="#3b82f6" style="background:#3b82f6" class="selected" aria-label="파랑"></button>
-          <button type="button" data-color="#22c55e" style="background:#22c55e" aria-label="초록"></button>
-          <button type="button" data-color="#f59e0b" style="background:#f59e0b" aria-label="주황"></button>
-          <button type="button" data-color="#ef4444" style="background:#ef4444" aria-label="빨강"></button>
-          <button type="button" data-color="#a855f7" style="background:#a855f7" aria-label="보라"></button>
-          <button type="button" data-color="#64748b" style="background:#64748b" aria-label="회색"></button>
-          <button type="button" id="newCatMore" class="more">기타…</button>
-        </div>
-        <input id="newCatColor" type="hidden" value="#3b82f6">
-        <input id="newCatColorPicker" class="visually-hidden" type="color" value="#3b82f6" />
+        <label>
+          기한
+          <input id="taskDueInput" type="date" />
+        </label>
+
+        <label>
+          카테고리
+          <select id="taskCategorySelect"></select>
+        </label>
 
         <div class="modal-actions">
-          <button id="newCatSaveBtn" class="primary" type="submit">추가</button>
+          <button type="button" id="taskSaveBtn" class="primary">추가</button>
         </div>
       </form>
-    </section>
+    </div>
+  </dialog>
+
+  <!-- ✅ 카테고리 센터 모달 -->
+  <dialog id="categoryCenterModal">
+    <div class="modal-body" role="dialog" aria-labelledby="catCenterTitle">
+      <div class="modal-head">
+        <h3 id="catCenterTitle">카테고리</h3>
+        <button id="catCenterCloseBtn" aria-label="닫기">✕</button>
+      </div>
+
+      <div class="tabs" role="tablist">
+        <button id="tabManage" class="tab active" role="tab" aria-selected="true">목록/관리</button>
+        <button id="tabCreate" class="tab" role="tab" aria-selected="false">새로 만들기</button>
+      </div>
+
+      <!-- 목록/관리 -->
+      <section id="catTabManage" role="tabpanel">
+        <div class="cat-toolbar">
+          <input id="catSearchInput" type="search" placeholder="카테고리 검색" />
+          <select id="catSortSelect" title="정렬">
+            <option value="order">정렬: 사용자 순서</option>
+            <option value="name">정렬: 이름</option>
+            <option value="count">정렬: 사용 개수</option>
+          </select>
+        </div>
+        <ul id="catCenterList" class="cat-center-list"></ul>
+        <p class="muted" style="margin-top:8px">
+          <small>기본(Inbox)은 삭제/이름변경할 수 없습니다. 삭제 시 해당 카테고리의 일정은 기본으로 이동합니다.</small>
+        </p>
+      </section>
+
+      <!-- 새로 만들기 -->
+      <section id="catTabCreate" role="tabpanel" hidden>
+        <form>
+          <label>
+            이름
+            <input id="newCatName" type="text" placeholder="예) 공부, 운동" autocomplete="off">
+          </label>
+
+          <div style="margin:8px 0 4px">색상</div>
+          <div id="newCatPalette" class="palette">
+            <button type="button" data-color="#3b82f6" style="background:#3b82f6" class="selected" aria-label="파랑"></button>
+            <button type="button" data-color="#22c55e" style="background:#22c55e" aria-label="초록"></button>
+            <button type="button" data-color="#f59e0b" style="background:#f59e0b" aria-label="주황"></button>
+            <button type="button" data-color="#ef4444" style="background:#ef4444" aria-label="빨강"></button>
+            <button type="button" data-color="#a855f7" style="background:#a855f7" aria-label="보라"></button>
+            <button type="button" data-color="#64748b" style="background:#64748b" aria-label="회색"></button>
+            <button type="button" id="newCatMore" class="more">기타…</button>
+          </div>
+          <input id="newCatColor" type="hidden" value="#3b82f6">
+          <input id="newCatColorPicker" class="visually-hidden" type="color" value="#3b82f6" />
+
+          <div class="modal-actions">
+            <button id="newCatSaveBtn" class="primary" type="submit">추가</button>
+          </div>
+        </form>
+      </section>
+    </div>
+  </dialog>
+
+  <!-- ✅ 포커스 오버레이 (일시정지/리셋/종료) -->
+  <div id="focusOverlay" hidden>
+    <div class="focus-overlay-inner">
+      <div id="focusBanner" class="focus-banner" hidden>일시정지됨 (앱 이탈 감지)</div>
+      <div class="focus-timer" id="focusTimer">00:00:00</div>
+      <div class="focus-controls">
+        <button id="focusPause" class="secondary">⏸ 일시정지</button>
+        <button id="focusReset" class="secondary" title="경과 시간 0으로 초기화">↺ 리셋</button>
+        <button id="focusEnd" class="secondary" title="세션 종료">■ 종료</button>
+      </div>
+    </div>
   </div>
-</dialog>
-  
-  <!-- 메뉴/드로어 + NAV (기존) -->
-  <script>
+
+  <!-- 메뉴/드로어 토글 & 해시 네비 -->
+  <script defer>
     (function(){
       const btn = document.getElementById('btnMenu');
       const drawer = document.getElementById('drawer');
@@ -197,8 +224,8 @@
       backdrop?.addEventListener('click', closeMenu);
       drawer?.addEventListener('click', e=>{ if(e.target.tagName==='A') closeMenu(); });
       window.addEventListener('keydown', e=>{ if(e.key==='Escape' && document.body.classList.contains('menu-open')) closeMenu(); });
+      window.addEventListener('contextmenu', e=> e.preventDefault());
     })();
-    window.addEventListener('contextmenu', e=> e.preventDefault());
 
     (function(){
       function showSection(id){
@@ -222,8 +249,9 @@
     })();
   </script>
 
-  <!-- 기존 todo.js 다음에 캘린더 로드 -->
+  <!-- 외부 스크립트: defer 로드 -->
   <script src="todo.js" defer></script>
   <script src="calendar.js" defer></script>
+  <script src="focus.js" defer></script>
 </body>
 </html>
